--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -14,7 +14,7 @@
     flex-direction: column;
     justify-content: center;
     opacity: 0%;
-    
+    z-index: 5;
     .itemContainer{
         display: flex;
         align-items: center;
