--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,111 @@
 .testimonials{
-    background-color: orange;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    user-select: none;
 }
+h1{
+    color: white;
+}
+p{
+    color: white;
+    font-size: 170%;
+
+}
+.text3{
+    background-color: rgb(17, 168, 228);    
+    height: 100%;
+    width: 500px;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 2;
+}
+
+.slides3{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    .buttons3{
+        height: 100%;
+        width: 75.4%;
+        z-index: 1;
+        display: flex;
+        position: absolute;
+        align-items: center;
+        z-index: 2;
+        justify-content: space-between;
+        .button3{
+            transition: ease 0.5s;
+            line-height: 110%;
+            text-align: center;
+            font-size: 200%;
+
+            display: inline-block; 
+            margin-inline: 2%;
+            padding: 0px 0px;
+            
+            border:none;
+            height: 5%;
+            width: 3%;
+            
+            overflow-y: hidden;
+            
+            border-radius: 10%;
+            background-color: rgb(17, 168, 228);
+            color: white;
+        }
+        .button3:hover{
+            transition: ease 0.1s;
+            background-color: rgb(17, 168, 228);
+            
+        }
+        .left3:hover{
+            transform: translateX(-15%);
+        }
+        .right3{
+            z-index: 3;
+        }
+        .right3:hover{
+            transform: translateX(15%);
+        }
+    }
+    img{
+        width: fit-content;
+    }
+}
+
+@media only screen and (max-width: 1600px){
+    .slides3{
+        .buttons3{
+            width: 73.5%;
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .works3{
+        flex-direction: column;
+    }
+    .text3{
+        height: 60%;
+    }
+    h1{
+        font-size: 250%;
+    }
+    p {
+      font-size: 150%;
+    }
+    .text3{
+        width: fit-content;
+        justify-content: start;
+    }
+    .slides3{
+        .buttons3{
+            align-content: center;
+            width: 100%;
+            height: 10%;
+        }
+    }
+  }
