--- a/src/app.scss
+++ b/src/app.scss
@@ -4,13 +4,12 @@
     .sections{
         width: 100%;
         height: calc(100vh - 100px);
-        background-color: chartreuse;
+        background-color: rgb(255, 255, 255);
         position: relative;
         top: 100px;
         
         scroll-behavior: smooth;
         scroll-snap-type: y mandatory;
-
 
         > * {
             width: 100vw;
