--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -6,17 +6,19 @@
     user-select: none;
 }
 h1{
+    margin-right: 3%;
     color: white;
 }
 p{
+    margin-right: 3%;
     color: white;
     font-size: 170%;
 
 }
 .text3{
-    background-color: rgb(17, 168, 228);    
+    background-color: rgb(224, 158, 14);    
     height: 100%;
-    width: 500px;
+    width: 28%;
     display: flex;
     align-content: center;
     flex-direction: column;
@@ -56,12 +58,12 @@ p{
             overflow-y: hidden;
             
             border-radius: 10%;
-            background-color: rgb(17, 168, 228);
+            background-color: rgb(224, 158, 14);
             color: white;
         }
         .button3:hover{
             transition: ease 0.1s;
-            background-color: rgb(17, 168, 228);
+            background-color: rgb(185, 133, 19);
             
         }
         .left3:hover{
