Python Projects page is compelete

--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -34,7 +34,7 @@ p{
 
     .buttons3{
         height: 100%;
-        width: 75.4%;
+        width: 73.8%;
         z-index: 1;
         display: flex;
         position: absolute;
@@ -42,6 +42,8 @@ p{
         z-index: 2;
         justify-content: space-between;
         .button3{
+            cursor: pointer;
+
             transition: ease 0.5s;
             line-height: 110%;
             text-align: center;
@@ -81,7 +83,7 @@ p{
 img{
     z-index: 1;
     transition: all 0.2s ease-in-out;
-    width: fit-content;
+    width: 100%;
 }
 @media only screen and (max-width: 1600px){
     .slides3{
